@@ -127,27 +127,6 @@ krb5_adm_ktent_to_proto(kcontext, ktentp, ncompp, complistp)
 	}
 
 	/*
-	 * Fill in key_etype.
-	 */
-	if (clist[KRB5_ADM_KT_KEY_ETYPE].data = 
-	    (char *) malloc(sizeof(krb5_ui_4))) {
-	    clist[KRB5_ADM_KT_KEY_ETYPE].length = sizeof(krb5_ui_4);
-	    clist[KRB5_ADM_KT_KEY_ETYPE].data[0] =
-		(ktentp->key.etype >> 24) & 0xff;
-	    clist[KRB5_ADM_KT_KEY_ETYPE].data[1] =
-		(ktentp->key.etype >> 16) & 0xff;
-	    clist[KRB5_ADM_KT_KEY_ETYPE].data[2] =
-		(ktentp->key.etype >> 8) & 0xff;
-	    clist[KRB5_ADM_KT_KEY_ETYPE].data[3] =
-		ktentp->key.etype & 0xff;
-	    nents++;
-	}
-	else {
-	    kret = ENOMEM;
-	    goto done;
-	}
-
-	/*
 	 * Fill in key_key.
 	 */
 	if (clist[KRB5_ADM_KT_KEY_KEY].data = 
